Add Recipes registerer and ingredient retriever
